|         - AWStats:                                              |
|               * apache: check if stats are working with FastCGI |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-07-17 Raphael Geissert
	- GUI:
		* Made changes to reflect fix for #465
		* Made changes to reflect fix for #483
	- ENGINE:
		* Fixed #482: Error into the script ispcp-dmn-mngr
		* Fixed #465: Error pages can't be displayed when PHP is disabled
		* Fixed #483: Domain aliases with same mount point (thanks to greg@proxyconcept.net)
	- CONFIGS:
		* Made changes to reflect fix for #465
		* Removed hardcoded /var/www/virtual path from 00_master.conf
		* Fixed #427: /etc/init.d/ispcp_daemon doesn't support "status"
		* Updated vhcs2ispcp.sql to reflect recent DB changes caused by #457
		* Added rotation of proftpd's log files (fixes incorrect ftp traffic counting when logs are big)
	- DAEMON:
		* Cleaned up code (also removed useless license-related stuff)

2007-07-16 Benedikt Heintel
	- GUI:
		* Fixed #457: Improve max-attempts limit for lost password's CAPTCHA
		* Fixed serveral errors.
	- SQL:
		* Added: cpatcha_count on table login in database.sql

2007-07-16 Raphael Geissert
	- GUI:
		* Fixed #457: Improved max-attempts limit for lost password's CAPTCHA
		* Fixed open_basedir problem with vfs.php while getting/putting files
	- ENGINE:
		* php{4,5} fcgi starter directories are now created, as necessary, when status is 'change'
		* Added partial fix for #465
	- CONFIGS:
		* Removed unecessary data from apache config parts

2007-07-15 Benedikt Heintel
	- GUI:
		* Fixed #457: Add max-attempts limit for lost password's CAPTCHA
		* Fixed #481: Error after Login

2007-07-13 Benedikt Heintel
	- GUI:
		* Updated: Squirrelmail to 1.4.10a
		* Fixed #479: username input field is too short

2007-07-13 Raphael Geissert
	- LANGUAGES