@@ -710,7 +710,7 @@ smtp_port = 25
 ;sendmail_from = me@example.com
 
 ; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
-sendmail_path = "/usr/sbin/sendmail -t -i -f webmaster@{DMN_NAME}"
+sendmail_path = "/usr/sbin/sendmail -t -i -f webmaster@{MAIL_DMN}"
 
 ; Force the addition of the specified parameters to be passed as extra parameters
 ; to the sendmail binary. These parameters will always replace the value of
